
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "raptorq_node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
raptorq = { version = "2.0.1", features = ["serde_support"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
